--- a/dockerstack/docker-compose.yml
+++ b/dockerstack/docker-compose.yml
@@ -10,6 +10,10 @@ services:
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - "http.cors.enabled=true"
       - "http.cors.allow-origin=http://localhost"
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - xpack.security.enabled=$ELASTIC_SECURITY
+      - xpack.security.authc.api_key.enabled=false
+      - xpack.security.transport.ssl.enabled=${SSL_ENABLED}
     ulimits:
       memlock:
         soft: -1
