--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,7 @@ pandas = "^2.2.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.extras]
+objaverse = ["objaverse"]
+testing = ["unittest"]
