--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ gradio = "^4.32.2"
 elasticsearch = "^8.13.0"
 boto3 = "^1.34.117"
 pandas = "^2.2.2"
-
-
+dotmap = "^1.3.30"
+minio = "^7.2.7"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
