--- a/gradio/config.env
+++ b/gradio/config.env
@@ -1,6 +1,9 @@
 es_url=https://localhost:9200
 es_user=elastic
 es_pass=changeme
-minio_url=http://localhost:9000
-minio_access=AKIAIOSFODNN7EXAMPLE
-minio_secret=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+es_index=objaverse
+minio_url=localhost:9000
+minio_key=499jdT1xhXqPof6R7CMn
+minio_secret=Gq5CUufdtjy5nfvbtYdVvqbfqG2hE0CYN5pgXhy7
+minio_bucket=objaverse
+fields=name|uid|uri|user.account
