--- a/utils/config.env
+++ b/utils/config.env
@@ -4,3 +4,4 @@ es_pass=changeme
 minio_url=localhost:9000
 minio_access=499jdT1xhXqPof6R7CMn
 minio_secret=Gq5CUufdtjy5nfvbtYdVvqbfqG2hE0CYN5pgXhy7
+minio_bucket=objaverse
