--- a/dockerstack/.env
+++ b/dockerstack/.env
@@ -41,3 +41,7 @@ MINIO_SECRET_KEY=Gq5CUufdtjy5nfvbtYdVvqbfqG2hE0CYN5pgXhy7
 MINIO_ROOT_USER=root
 MINIO_ROOT_PASSWORD=password
 MINIO_DEFAULT_BUCKETS=objects
+
+
+ELASTIC_PASSWORD=elastico
+KIBANA_PASSWORD=kibana
