--- a/tests/config.env
+++ b/tests/config.env
@@ -1,6 +1,6 @@
 es_url=https://localhost:9200
 es_user=elastic
-es_pass=changeme
+es_pass=elastico
 minio_url=localhost:9000
 minio_access=499jdT1xhXqPof6R7CMn
 minio_secret=Gq5CUufdtjy5nfvbtYdVvqbfqG2hE0CYN5pgXhy7
