--- a/dockerstack/docker-compose.yml
+++ b/dockerstack/docker-compose.yml
@@ -1,47 +1,144 @@
-version: '2.2'
+version: "3.8"
+
+# Template: https://github.com/elkninja/elastic-stack-docker-part-one/tree/main
+# Article: https://www.elastic.co/blog/getting-started-with-the-elastic-stack-and-docker-compose
+
 services:
-  esdb:
+  setup:
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
-    container_name: elasticsearch
+    volumes:
+      - certs:/usr/share/elasticsearch/config/certs
+    user: "0"
+    command: >
+      bash -c '
+        if [ x${ELASTIC_PASSWORD} == x ]; then
+          echo "Set the ELASTIC_PASSWORD environment variable in the .env file";
+          exit 1;
+        fi;
+        if [ ! -f config/certs/ca.zip ]; then
+          echo "Creating CA";
+          bin/elasticsearch-certutil ca --silent --pem -out config/certs/ca.zip;
+          unzip config/certs/ca.zip -d config/certs;
+        fi;
+        if [ ! -f config/certs/certs.zip ]; then
+          echo "Creating certs";
+          echo -ne \
+          "instances:\n"\
+          "  - name: es01\n"\
+          "    dns:\n"\
+          "      - es01\n"\
+          "      - localhost\n"\
+          "    ip:\n"\
+          "      - 127.0.0.1\n"\
+          > config/certs/instances.yml;
+          bin/elasticsearch-certutil cert --silent --pem -out config/certs/certs.zip --in config/certs/instances.yml --ca-cert config/certs/ca/ca.crt --ca-key config/certs/ca/ca.key;
+          unzip config/certs/certs.zip -d config/certs;
+        fi;
+        echo "Setting file permissions"
+        chown -R root:root config/certs;
+        find . -type d -exec chmod 750 \{\} \;;
+        find . -type f -exec chmod 640 \{\} \;;
+        echo "Waiting for Elasticsearch availability";
+        until curl -s --cacert config/certs/ca/ca.crt https://es01:9200 | grep -q "missing authentication credentials"; do sleep 30; done;
+        echo "All done!";
+      '
+    healthcheck:
+      test: ["CMD-SHELL", "[ -f config/certs/es01/es01.crt ]"]
+      interval: 1s
+      timeout: 5s
+      retries: 120
+
+  es01:
+    depends_on:
+      setup:
+        condition: service_healthy
+    image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
+    labels:
+      co.elastic.logs/module: elasticsearch
+    volumes:
+      - certs:/usr/share/elasticsearch/config/certs
+      - esdata01:/usr/share/elasticsearch/data
+    ports:
+      - ${ES_PORT}:9200
     environment:
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
+      - node.name=es01
+      - cluster.name=${CLUSTER_NAME}
       - discovery.type=single-node
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - "http.cors.enabled=true"
-      - "http.cors.allow-origin=http://localhost"
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
-      - xpack.security.enabled=$ELASTIC_SECURITY
-      - xpack.security.authc.api_key.enabled=false
-      - xpack.security.transport.ssl.enabled=${SSL_ENABLED}
+      - bootstrap.memory_lock=true
+      - xpack.security.enabled=true
+      - xpack.security.http.ssl.enabled=true
+      - xpack.security.http.ssl.key=certs/es01/es01.key
+      - xpack.security.http.ssl.certificate=certs/es01/es01.crt
+      - xpack.security.http.ssl.certificate_authorities=certs/ca/ca.crt
+      - xpack.security.transport.ssl.enabled=true
+      - xpack.security.transport.ssl.key=certs/es01/es01.key
+      - xpack.security.transport.ssl.certificate=certs/es01/es01.crt
+      - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt
+      - xpack.security.transport.ssl.verification_mode=certificate
+      - xpack.license.self_generated.type=${LICENSE}
+      - "ES_JAVA_OPTS=-Xms1024m -Xmx1024m"
+    #mem_limit: ${ES_MEM_LIMIT}
     ulimits:
       memlock:
         soft: -1
         hard: -1
-    volumes:
-      - esdata:/usr/share/elasticsearch/data
-    ports:
-      - 9200:9200
-    networks:
-      - esnet
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "curl -s --cacert config/certs/ca/ca.crt https://localhost:9200 | grep -q 'missing authentication credentials'",
+        ]
+      interval: 10s
+      timeout: 10s
+      retries: 120
+
 
   minio:
     image: docker.io/bitnami/minio:latest
     ports:
       - '9000:9000'
       - '9001:9001'
-    networks:
-      - esnet
     volumes:
       - 'minio_data:/data'
     environment:
       - MINIO_ROOT_USER=root
       - MINIO_ROOT_PASSWORD=password
       - MINIO_DEFAULT_BUCKETS=objects
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "curl -f http://localhost:9001/minio/index.html || exit 1",
+        ]
+      interval: 2s
+      timeout: 3s
+      retries: 3
+
+  setupminio:
+    image: docker.io/bitnami/minio:latest
+    depends_on:
+      minio:
+          condition: service_healthy
+    volumes:
+      - 'minio_data:/data'
+    user: "0"
+    command: >
+      bash -c '
+      sleep 5;
+      echo "Setting access keys for ${MINIO_DEFAULT_BUCKETS}";
+      mc admin user svcacct add local ${MINIO_ROOT_USER} --access-key ${MINIO_ACCESS_KEY} --secret-key ${MINIO_SECRET_KEY};
+      echo "All done!";
+            '
 volumes:
-  esdata:
+  certs:
+    driver: local
+  esdata01:
     driver: local
   minio_data:
     driver: local
+
 networks:
-  esnet:
+  default:
+    name: elastic
+    external: false
