--- a/gradio/config.env
+++ b/gradio/config.env
@@ -1,6 +1,6 @@
 es_url=https://localhost:9200
 es_user=elastic
-es_pass=changeme
+es_pass=elastico
 es_index=objaverse
 minio_url=localhost:9000
 minio_key=499jdT1xhXqPof6R7CMn
