Added file upload, Celery and Redis support.

--- a/dockerstack/.env
+++ b/dockerstack/.env
@@ -45,3 +45,5 @@ MINIO_DEFAULT_BUCKETS=objects
 
 ELASTIC_PASSWORD=elastico
 KIBANA_PASSWORD=kibana
+
+REDIS_PASSWORD=eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
