--- a/gradio/config.env
+++ b/gradio/config.env
@@ -7,3 +7,5 @@ minio_key=499jdT1xhXqPof6R7CMn
 minio_secret=Gq5CUufdtjy5nfvbtYdVvqbfqG2hE0CYN5pgXhy7
 minio_bucket=objaverse
 fields=name|uid|uri|user.account
+redis_url=redis://:eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81@localhost:6379/0
+cap3d_path=/home/robomotic/Cap3D/captioning_pipeline
