added celery and initial tests

--- a/tests/config.env
+++ b/tests/config.env
@@ -4,3 +4,4 @@ es_pass=elastico
 minio_url=localhost:9000
 minio_access=499jdT1xhXqPof6R7CMn
 minio_secret=Gq5CUufdtjy5nfvbtYdVvqbfqG2hE0CYN5pgXhy7
+redis_url=redis://:eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81@localhost:6379/0
