--- a/gradio/config.env
+++ b/gradio/config.env
@@ -9,3 +9,4 @@ minio_bucket=objaverse
 fields=name|uid|uri|user.account
 redis_url=redis://:eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81@localhost:6379/0
 cap3d_path=/home/robomotic/Cap3D/captioning_pipeline
+fast_api=
